# winnwt5

./: .gitignore  Attenuator.cpp  Attenuator.h  BugReport.h  CMakeLists.txt  README.md  app_cn.ts  app_de.ts  app_ea.ts  app_es.ts  app_hu.ts  app_nl.ts  app_pl.ts  app_ru.ts  build.h  build_inc.bat  configfile.cpp  configfile.h  constdef.h  firmwaredlg.cpp  firmwaredlg.h  firmwidget.cpp  fmarkedlg.cpp  fmarkedlg.h  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  markersdlg.cpp  markersdlg.h  modem.hpp  modem_lin.cpp  modem_lin.h  modem_qsp.cpp  modem_win.cpp  modem_win.h  nwt7mainclass.cpp  nwt7mainclass.h  optiondlg.cpp  optiondlg.h  (+10 more)
Docs/: history.txt  licence.txt
images_source/: NWT7-Ex Icons.ai  box.ai  exit.psd  fmarker.psd  open.psd  option.psd  printer.psd  printpdf.psd  profile.psd  save.psd  saveimage.psd  width.psd
install/: WinNWT5.iss
